# qtwasmserver

./: LICENSE  README.md  build  pyproject.toml
src/qtwasmserver/: qtwasmserver.py
